[package]
name = "schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
itertools = "0.12.1"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls-native-roots"] }
serde = { version = "1.0.196", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.10"
